2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb_stm32f103.c: Update from Gnuk.
	* example-cdc/usb_lld.h: Ditto.
	* example-cdc/usb-cdc.c: Follow the change.

2015-07-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.07.
	* doc/chopstx.texi (VERSION): 0.07.

2015-07-14  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-*.h (BOARD_ID): New.
	* example-cdc/sys.c (sys_board_id): New.
	* example-cdc/sample.ld (.sys.board_id): New.
	(__flash_start__, __flash_end__): Remove.
	* entry.c [HAVE_SYS_H] (vector_table): By undefining STM32F10X_MD,
	prepare for high density device even compiled for MD device.

2015-07-13  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* board/board-stm32-primer2.h: Update.
	* entry.c (vector_table): Less or more.

2015-07-13  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-*.h (BOARD_NAME): New.
	(STM32F10X_MD): Define for medium-density devices.
	* example-led/sys.c, sample.ld: Update.
	* example-fsm-55/sys.c, hacker-emblem.ld: Update.
	* example-cdc/sys.c (sys_board_name): New.
	* example-cdc/sample.ld: Update.

2015-07-08  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.06.
	* doc/chopstx.texi (VERSION): 0.06.

2015-07-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/sys.c: Include clk_gpio_init.c.
	* board/board-stm32f0-discovery.h, board/board-fsm-55.h: Update.
	* clk_gpio_init.c (gpio_init): Use VAL_GPIO_LED_*.

2015-06-29  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-cq-starm.h: New for CQ STARM.

	* clk_gpio_init.c (gpio_init): LED is mandatory, but USB enabler
	is optional.
	* board/*.h: Update.

2015-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* clk_gpio_init.c: New, adding ports E/F/G.
	* entry.c: Include clk_gpio.init.c if not HAVE_SYS_H.
	* example-led/sys.c: Include clk_gpio_init.c.
	* example-cdc/sys.c: Ditto.

	* board/board-stm32-primer2.h: New from Kaz Kojima.

2015-04-20  Niibe Yutaka  <gniibe@fsij.org>

	Merge cortex-m0-support branch.

	* VERSION: 0.05.

	* example-led/sys.c (gpio_init): Support MCU_STM32F0.