@@ -1,8 +1,6 @@
 #define BOARD_NAME "STBee"
 #define BOARD_ID    0x945c37e8
 
-#define FLASH_PAGE_SIZE 2048
-
 #define STM32_PLLXTPRE                  STM32_PLLXTPRE_DIV1
 #define STM32_PLLMUL_VALUE              6
 #define STM32_HSECLK                    12000000
