@@ -1,3 +1,9 @@
+2015-07-29  Niibe Yutaka  <gniibe@fsij.org>
+
+	* board/board-st-dongle.h: New.
+
+	* board/board-*.h (FLASH_PAGE_SIZE): Remove.
+
 2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
 
 	* example-cdc/usb_stm32f103.c: Update from Gnuk.
